Add libkmip submodule
Note: this is a (private) fork of official libkmip, adding an unmerged feature PR as well as some enhancements and bug fixes to the latter.

The fork should be moved into scylladb github org.

--- a/.gitmodules
+++ b/.gitmodules
@@ -15,3 +15,6 @@
 [submodule "tools/cqlsh"]
 	path = tools/cqlsh
 	url = ../scylla-cqlsh
+[submodule "libkmip"]
+	path = libkmip
+	url = https://github.com/elcallio/libkmip.git
