--- a/cql3/CMakeLists.txt
+++ b/cql3/CMakeLists.txt
@@ -47,6 +47,7 @@ target_sources(cql3
     functions/aggregate_fcts.cc
     functions/castas_fcts.cc
     functions/error_injection_fcts.cc
+    statements/strong_consistency/select_statement.cc
     statements/strong_consistency/modification_statement.cc
     statements/strong_consistency/statement_helpers.cc
     functions/vector_similarity_fcts.cc
