strong_consistency: add state_machine and raft_command
These commands will be used by strongly consistent tablets to submit
mutations to Raft. A simple state_machine implementation is introduced
to apply these commands.

We apply commands in batches to reduce commitlog I/O overhead. The
batched variant of database::apply has known atomicity issues. For
example, it does not guarantee atomicity under memory pressure: some
mutations may be published to the memtable while others are blocked in
run_when_memory_available. We will address these issues later.

--- a/service/CMakeLists.txt
+++ b/service/CMakeLists.txt
@@ -17,6 +17,7 @@ target_sources(service
     qos/service_level_controller.cc
     qos/standard_service_level_distributed_data_accessor.cc
     qos/raft_service_level_distributed_data_accessor.cc
+    strong_consistency/state_machine.cc
     raft/discovery.cc
     raft/group0_state_id_handler.cc
     raft/group0_state_machine.cc
