--- a/service/CMakeLists.txt
+++ b/service/CMakeLists.txt
@@ -37,7 +37,8 @@ target_sources(service
     task_manager_module.cc
     topology_coordinator.cc
     topology_mutation.cc
-    topology_state_machine.cc)
+    topology_state_machine.cc
+    topology_utils.cc)
 target_include_directories(service
   PUBLIC
     ${CMAKE_SOURCE_DIR})
