http: extract error classification code
move http client related error classification code to a common location for future reuse

--- a/utils/CMakeLists.txt
+++ b/utils/CMakeLists.txt
@@ -27,6 +27,7 @@ target_sources(utils
     hashers.cc
     histogram_metrics_helper.cc
     http.cc
+    http_client_error_processing.cc
     human_readable.cc
     i_filter.cc
     io-wrappers.cc
