object_storage: add retryable machinery to object storage
remove hand rolled error handling from object storage client
and replace with common machinery that supports exception
handling and retrying when appropriate

--- a/utils/CMakeLists.txt
+++ b/utils/CMakeLists.txt
@@ -66,6 +66,7 @@ target_sources(utils
     azure/identity/default_credentials.cc
     gcp/gcp_credentials.cc
     gcp/object_storage.cc
+    gcp/object_storage_retry_strategy.cc
     )
 target_include_directories(utils
   PUBLIC
