test/alternator: Enable auditing for the Alternator tests

--- a/test/alternator/test_config.yaml
+++ b/test/alternator/test_config.yaml
@@ -23,5 +23,6 @@ extra_scylla_config_options:
     alternator_timeout_in_ms: 30000,
     alternator_ttl_period_in_seconds: 0.5,
     alternator_streams_time_window_s: 0,
-    tablets_mode_for_new_keyspaces: enabled
+    tablets_mode_for_new_keyspaces: enabled,
+    audit: table
   }
