code: Move limiting data source to test/lib
Only two tests use it now -- the limit-data-source-test iself and a test
that validates continuous_data_consumer template.

Signed-off-by: Pavel Emelyanov <xemul@scylladb.com>

--- a/test/lib/CMakeLists.txt
+++ b/test/lib/CMakeLists.txt
@@ -26,6 +26,7 @@ target_sources(test-lib
     gcs_fixture.cc
     aws_kms_fixture.cc
     azure_kms_fixture.cc
+    limiting_data_source.cc
     )
 target_include_directories(test-lib
   PUBLIC
