--- a/test/boost/CMakeLists.txt
+++ b/test/boost/CMakeLists.txt
@@ -312,6 +312,8 @@ add_scylla_test(address_map_test
   KIND SEASTAR)
 add_scylla_test(object_storage_upload_test
   KIND SEASTAR)
+add_scylla_test(tablet_aware_restore_test
+  KIND SEASTAR)
 
 add_scylla_test(combined_tests
   KIND SEASTAR
