--- a/service/CMakeLists.txt
+++ b/service/CMakeLists.txt
@@ -20,6 +20,7 @@ target_sources(service
     strong_consistency/groups_manager.cc
     strong_consistency/state_machine.cc
     strong_consistency/coordinator.cc
+    strong_consistency/raft_groups_storage.cc
     raft/discovery.cc
     raft/group0_state_id_handler.cc
     raft/group0_state_machine.cc
