tools: toolchain: switch from ccache to sccache
sccache combines the functions of ccache and distcc, and
promises to support C++20 modules in the future. Switch
to sccache in anticipation of modules support.

The documentation is adjusted since cache will be
persistent for sccache without further work.

--- a/tools/toolchain/Dockerfile
+++ b/tools/toolchain/Dockerfile
@@ -7,7 +7,7 @@ WORKDIR /mnt
 RUN echo install_weak_deps=False >> /etc/dnf/dnf.conf
 RUN dnf -y update \
     && dnf -y install 'dnf-command(copr)' \
-    && dnf -y install ccache \
+    && dnf -y install sccache \
     && dnf -y install devscripts debhelper fakeroot file rpm-build \
     && ./install-dependencies.sh && dnf clean all \
     && rm -rf /root/.cache /root/.cargo \
