test.py: improve C++ fail summary in pytest
Currently, if the test fail, pytest will output only some basic information
about the fail. With this change, it will output the last 300 lines of the
boost/seastar test output.
Also add capturing the output of the failed tests to JUnit report, so it
will be present in the report on Jenkins.

Fixes: https://scylladb.atlassian.net/browse/SCYLLADB-449

Closes scylladb/scylladb#28535

--- a/test/pytest.ini
+++ b/test/pytest.ini
@@ -2,6 +2,9 @@
 asyncio_mode = auto
 asyncio_default_fixture_loop_scope = session
 
+junit_logging = all
+junit_log_passing_tests = False
+
 log_format = %(asctime)s.%(msecs)03d %(levelname)s>  %(message)s
 log_date_format = %H:%M:%S
 
