test/boost encryption_at_rest_test: use leased host
Currently uses fixed ip and port to start dummy KMS server, which leads
to address clashes and flaky tests in CI.
Use the newly introduced host leasing mechanism: add test to
test_config.yaml need_leased_host listing. Take host from environment
variable and use it instead of fixed 127.0.0.1

Fixes: scylladb/scylladb#25084

--- a/test/boost/test_config.yaml
+++ b/test/boost/test_config.yaml
@@ -53,3 +53,7 @@ custom_args:
         - '-c2 -m2G --logger-log-level batchlog_manager=trace:debug_error_injection=trace:testlog=trace'
 run_in_debug:
     - logalloc_standard_allocator_segment_pool_backend_test
+# Tests that need a leased host IP address from the host registry
+# The IP will be provided via the SCYLLA_TEST_LEASED_HOST environment variable
+need_leased_host:
+    - encryption_at_rest_test
