s3_perf: fix the CMake build
Fix the CMake build of the perf_s3_client by adding the
necessary linkage with the jsoncpp library.

--- a/test/perf/CMakeLists.txt
+++ b/test/perf/CMakeLists.txt
@@ -93,7 +93,9 @@ add_perf_test(perf_mutation_fragment)
 add_perf_test(perf_vint)
 add_perf_test(perf_row_cache_reads)
 add_perf_test(perf_generic_server)
-add_perf_test(perf_s3_client)
+add_perf_test(perf_s3_client
+  LIBRARIES
+    JsonCpp::JsonCpp)
 add_perf_test(perf_sort_by_proximity)
 add_perf_test(perf_bti_key_translation
   LIBRARIES
