Add vector_native_value for efficient vector handling
- Introduced vector_native_value to represent CQL vector values in memory.
- Supports both fixed-size and variable-size elements, enabling zero-copy access for fixed-size vectors.
- Updated vector_type_impl to utilize vector_native_value instead of std::vector<data_value>.
- Enhanced serialization and deserialization methods to accommodate the new representation.
- Refactored related functions and tests to ensure compatibility with the new vector handling.
- Improved performance by reducing overhead in vector operations and memory allocations.

--- a/types/CMakeLists.txt
+++ b/types/CMakeLists.txt
@@ -4,7 +4,8 @@ target_sources(types
     comparable_bytes.cc
     duration.cc
     json_utils.cc
-    types.cc)
+    types.cc
+    vector_native_value.cc)
 target_include_directories(types
   PUBLIC
     ${CMAKE_SOURCE_DIR})
