test.py: setup pytest logger
This commit introduces pure pytest logging into a file

Previously, test.py used pytest as a script(not a framework) and just captured pytest stdout and logged this data by itself

This commit sets up the log files format that additionaly display Python processName, threadName adn taskName because test.py test cases use them, and now it is so hard to investigate issues that are connected with parallelism inside test case themselve

In addition, commit splits the logging of different pytest workers(xdist) into different files. If pytest workers have ho failed test - log file for these workers will be deleted

There is also additional logging for failures that will contain a separate file per test failure and contain the error itself (stacktrace) and all capture logs  from stdout, stderr during the test run

All this new functionality works with the new xdit scheduler (--test-py-init=True)

--- a/test/pytest.ini
+++ b/test/pytest.ini
@@ -8,6 +8,9 @@ junit_log_passing_tests = False
 log_format = %(asctime)s.%(msecs)03d %(levelname)s>  %(message)s
 log_date_format = %H:%M:%S
 
+log_file_format = %(asctime)s.%(msecs)03d %(processName)s %(threadName)s %(taskName)s %(levelname)s %(name)s>  %(message)s
+log_file_level = DEBUG
+
 markers =
     slow: tests that take more than 30 seconds to run
     replication_factor: replication factor for RandomTables
