Modify issue trigger types in workflow
Restrict the workflow to only trigger on opened issues.

--- a/.github/workflows/close_issue_for_scylla_associate.yml
+++ b/.github/workflows/close_issue_for_scylla_associate.yml
@@ -2,7 +2,7 @@ name: Close issues created by Scylla associates
 
 on:
   issues:
-    types: [opened, reopened]
+    types: [opened]
 
 permissions:
   issues: write
