messaging: Add RESTORE_TABLET RPC verb
The topology coordinator will need to call this verb against existing
tablet replicas to ask them restore tablet sstables. Here's the RPC verb
to do it.

It now returns an empty restore_result to make it "synchronous" -- the
co_await send_restore_tablets() won't resolve until client call
finishes.

Signed-off-by: Pavel Emelyanov <xemul@scylladb.com>

--- a/idl/CMakeLists.txt
+++ b/idl/CMakeLists.txt
@@ -52,6 +52,7 @@ set(idl_headers
   group0.idl.hh
   hinted_handoff.idl.hh
   sstables.idl.hh
+  sstables_loader.idl.hh
   storage_proxy.idl.hh
   storage_service.idl.hh
   strong_consistency/state_machine.idl.hh
